--- a/configs/cord.preprocess.yaml
+++ b/configs/cord.preprocess.yaml
@@ -1,10 +1,10 @@
 verbose: true
 data_paths:
-  dev: /kaggle/working/val_data.jsonl
+  dev: /kaggle/input/vietnamese-receipts-mc-ocr-2021/mcocr_val_sample_df.csv
   op_dev: receipt_ind_cord_v0.1/dev/op_dev_type0.jsonl
   op_test: receipt_ind_cord_v0.1/test/op_test_type0.jsonl
   test: receipt_ind_cord_v0.1/test/test_type0.jsonl
-  train: /kaggle/working/train_data.jsonl
+  train: /kaggle/input/vietnamese-receipts-mc-ocr-2021/mcocr_train_df.csv
 dist_norm: img_diagonal
 infer_param:
   allow_small_edit_distance: true
